@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -44,6 +44,9 @@ import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -75,21 +78,46 @@ public class SyncPortProcessor extends AbstractProcessor {
     // HOTSPOT_PORT_SYNC_CHECK=true HOTSPOT_PORT_SYNC_SHIFT_UPDATE_CMD_FILE="update.sh" mx build &&
     // bash update.sh
     static final String SYNC_SHIFT_UPDATE_COMMAND_DUMP_FILE_ENV_VAR = "HOTSPOT_PORT_SYNC_SHIFT_UPDATE_CMD_FILE";
+    // Allows searching code in the range [BEGIN-$HOTSPOT_PORT_SYNC_SEARCH_RANGE,
+    // END+HOTSPOT_PORT_SYNC_SEARCH_RANGE].
+    static final String SYNC_SEARCH_RANGE_VAR = "HOTSPOT_PORT_SYNC_SEARCH_RANGE";
 
-    static final String JDK_LATEST = "https://raw.githubusercontent.com/openjdk/jdk/master/";
-    static final String JDK_LATEST_HUMAN = "https://github.com/openjdk/jdk/blob/master/";
-    static final String JDK_LATEST_INFO = "https://api.github.com/repos/openjdk/jdk/git/matching-refs/heads/master";
+    static final String JDK_LATEST = "https://raw.githubusercontent.com/openjdk/%s/master/";
+    static final String JDK_LATEST_INFO = "https://api.github.com/repos/openjdk/%s/git/matching-refs/heads/master";
 
     static final String SYNC_PORT_CLASS_NAME = "jdk.graal.compiler.lir.SyncPort";
     static final String SYNC_PORTS_CLASS_NAME = "jdk.graal.compiler.lir.SyncPorts";
 
-    static final Pattern URL_PATTERN = Pattern.compile("^https://github.com/openjdk/jdk/blob/(?<commit>[0-9a-fA-F]{40})/(?<path>[-_./A-Za-z0-9]+)#L(?<lineStart>[0-9]+)-L(?<lineEnd>[0-9]+)$");
+    static final Pattern URL_PATTERN = Pattern.compile(
+                    "^https://github.com/(?<user>[^/]+)/(?<repo>[^/]+)/blob/(?<commit>[0-9a-fA-F]{40})/(?<path>[-_./A-Za-z0-9]+)#L(?<lineStart>[0-9]+)-L(?<lineEnd>[0-9]+)$");
+    static final Pattern URL_RAW_PATTERN = Pattern.compile("^https://raw.githubusercontent.com/(?<user>[^/]+)/(?<repo>[^/]+)/(?<commit>[0-9a-fA-F]{40})/$");
 
-    static final int SEARCH_RANGE = 200;
+    static final int DEFAULT_SEARCH_RANGE = 200;
+
+    private final boolean isEnabled;
+    private final boolean shouldDump;
+    private final String dumpUpdateCommandsEnvVar;
+    private final String overwriteURL;
+    private final int searchRange;
+
+    public SyncPortProcessor() {
+        this.isEnabled = Boolean.parseBoolean(System.getenv(SYNC_CHECK_ENV_VAR));
+        this.shouldDump = Boolean.parseBoolean(System.getenv(SYNC_DUMP_ENV_VAR));
+        this.dumpUpdateCommandsEnvVar = System.getenv(SYNC_SHIFT_UPDATE_COMMAND_DUMP_FILE_ENV_VAR);
+        this.overwriteURL = System.getenv(SYNC_OVERWRITE_ENV_VAR);
+
+        int tempSearchRange = DEFAULT_SEARCH_RANGE;
+        try {
+            tempSearchRange = Integer.parseInt(System.getenv(SYNC_SEARCH_RANGE_VAR));
+        } catch (NumberFormatException e) {
+            // SYNC_SEARCH_RANGE_VAR not set or illegal
+        }
+        this.searchRange = tempSearchRange;
+    }
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return Set.of(SYNC_PORT_CLASS_NAME, SYNC_PORTS_CLASS_NAME);
+        return Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList(SYNC_PORT_CLASS_NAME, SYNC_PORTS_CLASS_NAME)));
     }
 
     private void compareDigest(MessageDigest md, AnnotationMirror annotationMirror, Element element, Proxy proxy) throws IOException, URISyntaxException {
@@ -104,12 +132,13 @@ public class SyncPortProcessor extends AbstractProcessor {
             return;
         }
 
+        String user = matcher.group("user");
+        String repo = matcher.group("repo");
         String commit = matcher.group("commit");
         String path = matcher.group("path");
         int lineStart = Integer.parseInt(matcher.group("lineStart"));
         int lineEnd = Integer.parseInt(matcher.group("lineEnd"));
 
-        String dumpUpdateCommandsEnvVar = System.getenv(SYNC_SHIFT_UPDATE_COMMAND_DUMP_FILE_ENV_VAR);
         PrintWriter dumpUpdateCommands;
         if (dumpUpdateCommandsEnvVar != null) {
             dumpUpdateCommands = new PrintWriter(new FileOutputStream(dumpUpdateCommandsEnvVar, true));
@@ -117,10 +146,9 @@ public class SyncPortProcessor extends AbstractProcessor {
             dumpUpdateCommands = null;
         }
         try (dumpUpdateCommands) {
-            String overwriteURL = System.getenv(SYNC_OVERWRITE_ENV_VAR);
             boolean isURLOverwritten = overwriteURL != null && !"".equals(overwriteURL);
 
-            String urlPrefix = isURLOverwritten ? overwriteURL : JDK_LATEST;
+            String urlPrefix = isURLOverwritten ? overwriteURL : String.format(JDK_LATEST, repo);
             String url = urlPrefix + path;
             String sha1Latest = digest(proxy, md, url, lineStart - 1, lineEnd);
 
@@ -128,22 +156,34 @@ public class SyncPortProcessor extends AbstractProcessor {
                 return;
             }
 
+            String latestCommit;
+
+            if (isURLOverwritten) {
+                Matcher rawMatcher = URL_RAW_PATTERN.matcher(urlPrefix);
+                if (rawMatcher.matches()) {
+                    latestCommit = rawMatcher.group("commit");
+                } else {
+                    latestCommit = "UNKNOWN";
+                }
+            } else {
+                latestCommit = getLatestCommit(proxy, repo);
+            }
+
             String extraMessage = "";
 
-            String urlOld = String.format("https://raw.githubusercontent.com/openjdk/jdk/%s/%s", commit, path);
+            String urlOld = String.format("https://raw.githubusercontent.com/%s/%s/%s/%s", user, repo, commit, path);
             String sha1Old = digest(proxy, md, urlOld, lineStart - 1, lineEnd);
 
             if (sha1.equals(sha1Old)) {
-                String latestCommit = getLatestCommit(proxy);
-                int idx = find(proxy, urlOld, url, lineStart - 1, lineEnd, SEARCH_RANGE);
+                int idx = find(proxy, urlOld, url, lineStart - 1, lineEnd, searchRange);
                 if (idx != -1) {
                     int idxInclusive = idx + 1;
                     kind = NOTE;
-                    if (isURLOverwritten) {
+                    if ("UNKNOWN".equals(latestCommit)) {
                         extraMessage = " The original code snippet is shifted.";
                     } else {
-                        String urlFormat = "https://github.com/openjdk/jdk/blob/%s/%s#L%d-L%d";
-                        String newUrl = String.format(urlFormat, latestCommit, path, idxInclusive, idxInclusive + (lineEnd - lineStart));
+                        String urlFormat = "https://github.com/%s/%s/blob/%s/%s#L%d-L%d";
+                        String newUrl = String.format(urlFormat, user, repo, latestCommit, path, idxInclusive, idxInclusive + (lineEnd - lineStart));
                         extraMessage = String.format("""
                                          The original code snippet is shifted. Update with:
                                         @SyncPort(from = "%s",
@@ -152,44 +192,56 @@ public class SyncPortProcessor extends AbstractProcessor {
                                         newUrl,
                                         sha1);
                         if (dumpUpdateCommands != null) {
-                            String oldUrl = String.format(urlFormat, commit, path, lineStart, lineEnd);
+                            String oldUrl = String.format(urlFormat, user, repo, commit, path, lineStart, lineEnd);
                             assert !oldUrl.contains("+");
                             assert !newUrl.contains("+");
+                            // Parfait_ALLOW xss-injection
                             dumpUpdateCommands.printf("sed -i s+%s+%s+g $(git grep --files-with-matches %s)%n", oldUrl, newUrl, sha1);
                         }
                     }
                 } else {
                     extraMessage = String.format("""
                                      See also:
-                                    https://github.com/openjdk/jdk/compare/%s...%s
-                                    https://github.com/openjdk/jdk/commits/%s/%s
+                                    https://github.com/%s/%s/compare/%s...%s
+                                    https://github.com/%s/%s/commits/%s/%s
                                     """,
+                                    user,
+                                    repo,
                                     commit,
                                     latestCommit,
+                                    user,
+                                    repo,
                                     latestCommit,
                                     path);
-                    if (Boolean.parseBoolean(System.getenv(SYNC_DUMP_ENV_VAR))) {
-                        dump(proxy, urlOld, lineStart - 1, lineEnd, element + ".old");
-                        dump(proxy, url, lineStart - 1, lineEnd, element + ".new");
+                    if (shouldDump) {
+                        dump(proxy, urlOld, lineStart - 1, lineEnd, "old", element.getSimpleName().toString());
+                        dump(proxy, url, lineStart - 1, lineEnd, "new", element.getSimpleName().toString());
                     }
                 }
             } else {
                 extraMessage = String.format("""
                                  New SyncPort? Then:
-                                @SyncPort(from = "https://github.com/openjdk/jdk/blob/%s/%s#L%d-L%d",
+                                @SyncPort(from = "https://github.com/%s/%s/blob/%s/%s#L%d-L%d",
                                           sha1 = "%s")
                                 """,
-                                getLatestCommit(proxy),
+                                user,
+                                repo,
+                                latestCommit,
                                 path,
                                 lineStart,
                                 lineEnd,
                                 sha1Latest);
+                if (dumpUpdateCommands != null) {
+                    dumpUpdateCommands.printf("sed -i s+%s+%s+g $(git grep --files-with-matches %s)%n", sha1, sha1Latest, sha1);
+                }
             }
             env().getMessager().printMessage(kind,
-                            String.format("Sha1 digest of %s (ported by %s) does not match %s%s#L%d-L%d : expected %s but was %s.%s",
+                            String.format("Sha1 digest of %s (ported by %s) does not match https://github.com/%s/%s/blob%s/%s#L%d-L%d : expected %s but was %s.%s",
                                             from,
                                             toString(element),
-                                            isURLOverwritten ? overwriteURL : JDK_LATEST_HUMAN,
+                                            user,
+                                            repo,
+                                            isURLOverwritten ? "/" + latestCommit : "/master",
                                             path,
                                             lineStart,
                                             lineEnd,
@@ -226,6 +278,7 @@ public class SyncPortProcessor extends AbstractProcessor {
             // will be different from hashing the whole file.
             in.lines().skip(lineStartExclusive).limit(lineEnd - lineStartExclusive).map(String::getBytes).forEach(md::update);
         }
+        // Parfait_ALLOW missing-crypto-step
         return String.format("%040x", new BigInteger(1, md.digest()));
     }
 
@@ -247,11 +300,17 @@ public class SyncPortProcessor extends AbstractProcessor {
         return -1;
     }
 
-    private static void dump(Proxy proxy, String url, int lineStartExclusive, int lineEnd, String fileName) throws IOException, URISyntaxException {
+    private static void dump(Proxy proxy, String url, int lineStartExclusive, int lineEnd, String dirName, String fileName) throws IOException, URISyntaxException {
         URLConnection connection = new URI(url).toURL().openConnection(proxy);
         try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
             String content = in.lines().skip(lineStartExclusive).limit(lineEnd - lineStartExclusive).collect(Collectors.joining("\n"));
-            try (PrintWriter out = new PrintWriter(fileName + ".tmp")) {
+            File directory = new File(dirName);
+            if (!directory.exists()) {
+                directory.mkdir();
+            }
+
+            try (PrintWriter out = new PrintWriter(dirName + "/" + fileName + ".tmp")) {
+                // Parfait_ALLOW xss-injection
                 out.print(content);
                 out.print('\n');
             }
@@ -260,11 +319,11 @@ public class SyncPortProcessor extends AbstractProcessor {
 
     private String cachedLatestCommit = null;
 
-    private String getLatestCommit(Proxy proxy) throws IOException, URISyntaxException {
+    private String getLatestCommit(Proxy proxy, String repo) throws IOException, URISyntaxException {
         if (cachedLatestCommit == null) {
             String result = null;
 
-            URLConnection connection = new URI(JDK_LATEST_INFO).toURL().openConnection(proxy);
+            URLConnection connection = new URI(String.format(JDK_LATEST_INFO, repo)).toURL().openConnection(proxy);
             try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
                 String result1 = in.lines().collect(Collectors.joining());
                 int idx = result1.indexOf("commits/");
@@ -286,12 +345,13 @@ public class SyncPortProcessor extends AbstractProcessor {
 
     @Override
     protected boolean doProcess(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
-        if (Boolean.parseBoolean(System.getenv(SYNC_CHECK_ENV_VAR))) {
+        if (isEnabled) {
             if (!roundEnv.processingOver()) {
                 try {
                     // Set https.protocols explicitly to avoid handshake failure
                     System.setProperty("https.protocols", "TLSv1.2");
                     TypeElement tSyncPort = getTypeElement(SYNC_PORT_CLASS_NAME);
+                    // Parfait_ALLOW weak-hash
                     MessageDigest md = MessageDigest.getInstance("SHA-1");
 
                     Proxy proxy = Proxy.NO_PROXY;
@@ -319,6 +379,6 @@ public class SyncPortProcessor extends AbstractProcessor {
                 }
             }
         }
-        return false;
+        return true;
     }
 }
