@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,13 +24,13 @@
  */
 package jdk.graal.compiler.truffle.test;
 
+import java.io.IOException;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -49,6 +49,7 @@ import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 import com.oracle.truffle.api.HostCompilerDirectives.BytecodeInterpreterSwitch;
 import com.oracle.truffle.api.HostCompilerDirectives.InliningCutoff;
+import com.oracle.truffle.api.HostCompilerDirectives.InliningRoot;
 import com.oracle.truffle.api.Truffle;
 import com.oracle.truffle.api.dsl.Cached;
 import com.oracle.truffle.api.dsl.ImplicitCast;
@@ -59,9 +60,12 @@ import com.oracle.truffle.api.nodes.DirectCallNode;
 import com.oracle.truffle.api.nodes.Node;
 import com.oracle.truffle.api.nodes.RootNode;
 import com.oracle.truffle.api.profiles.InlinedCountingConditionProfile;
+import com.oracle.truffle.api.test.SubprocessTestUtils;
 import com.oracle.truffle.runtime.OptimizedCallTarget;
 import com.oracle.truffle.runtime.OptimizedDirectCallNode;
 
+import jdk.graal.compiler.annotation.AnnotationValue;
+import jdk.graal.compiler.annotation.AnnotationValueSupport;
 import jdk.graal.compiler.api.directives.GraalDirectives;
 import jdk.graal.compiler.core.phases.HighTier;
 import jdk.graal.compiler.debug.DebugContext;
@@ -82,6 +86,7 @@ import jdk.graal.compiler.options.OptionValues;
 import jdk.graal.compiler.phases.common.CanonicalizerPhase;
 import jdk.graal.compiler.phases.tiers.HighTierContext;
 import jdk.graal.compiler.truffle.host.HostInliningPhase;
+import jdk.graal.compiler.util.EconomicHashMap;
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 
@@ -103,66 +108,85 @@ public class HostInliningTest extends TruffleCompilerImplTest {
 
     @Parameters(name = "{0}")
     public static List<TestRun> data() {
-        return Arrays.asList(TestRun.DEFAULT);
+        return List.of(TestRun.DEFAULT);
     }
 
     @Test
-    public void test() {
-        runTest("testBasicInlining");
-        runTest("testDominatedDeopt");
-        runTest("testTruffleBoundary");
-        runTest("testPropagateDeopt");
-        runTest("testPropagateDeoptTwoLevels");
-        runTest("testRecursive");
-        runTest("testNotExplorable");
-        runTest("testBecomesDirectAfterInline");
-        runTest("testVirtualCall");
-        runTest("testInInterpreter1");
-        runTest("testInInterpreter2");
-        runTest("testInInterpreter3");
-        runTest("testInInterpreter4");
-        runTest("testInInterpreter5");
-        runTest("testInInterpreter6");
-        runTest("testInInterpreter7");
-        runTest("testInInterpreter8");
-        runTest("testInInterpreter9");
-        runTest("testInInterpreter10");
-        runTest("testInInterpreter11");
-        runTest("testInInterpreter12");
-        runTest("testExplorationDepth0");
-        runTest("testExplorationDepth1");
-        runTest("testExplorationDepth2");
-        runTest("testExplorationDepth0Fail");
-        runTest("testExplorationDepth1Fail");
-        runTest("testExplorationDepth2Fail");
-        runTest("testBytecodeSwitchtoBytecodeSwitch");
-        runTest("testInliningCutoff");
-        runTest("testNonDirectCalls");
-        runTest("testConstantFolding");
-        runTest("testDirectIntrinsics");
-        runTest("testIndirectIntrinsics");
-        runTest("testCountingConditionProfile");
-        runTest("testInterpreterCaller");
-        runTest("testIndirectThrow");
-        runTest("testThrow");
-        runTest("testRangeCheck");
-        runTest("testImplicitCast");
+    public void test() throws IOException, InterruptedException {
+        SubprocessTestUtils.newBuilder(HostInliningTest.class, () -> {
+            runTest("testBasicInlining");
+            runTest("testDominatedDeopt");
+            runTest("testTruffleBoundary");
+            runTest("testPropagateDeopt");
+            runTest("testPropagateDeoptTwoLevels");
+            runTest("testRecursive");
+            runTest("testNotExplorable");
+            runTest("testBecomesDirectAfterInline");
+            runTest("testVirtualCall");
+            runTest("testInInterpreter1");
+            runTest("testInInterpreter2");
+            runTest("testInInterpreter3");
+            runTest("testInInterpreter4");
+            runTest("testInInterpreter5");
+            runTest("testInInterpreter6");
+            runTest("testInInterpreter7");
+            runTest("testInInterpreter8");
+            runTest("testInInterpreter9");
+            runTest("testInInterpreter10");
+            runTest("testInInterpreter11");
+            runTest("testInInterpreter12");
+            runTest("testExplorationDepth0");
+            runTest("testExplorationDepth1");
+            runTest("testExplorationDepth2");
+            runTest("testExplorationDepth0Fail");
+            runTest("testExplorationDepth1Fail");
+            runTest("testExplorationDepth2Fail");
+            runTest("testBytecodeSwitchtoBytecodeSwitch");
+            runTest("testInliningCutoff");
+            runTest("testNonDirectCalls");
+            runTest("testConstantFolding");
+            runTest("testDirectIntrinsics");
+            runTest("testIndirectIntrinsics");
+            runTest("testCountingConditionProfile");
+            runTest("testInterpreterCaller");
+            runTest("testIndirectThrow");
+            runTest("testThrow");
+            runTest("testRangeCheck");
+            runTest("testImplicitCast");
+            runTest("testNativeCall");
+            runTest("testBCDSLPrologIfVersion");
+            runTest("testInliningRoot");
+        }).parameterizedBy(run).run();
     }
 
-    @SuppressWarnings("try")
+    /*
+     * Test for GR-69170
+     */
+    @BytecodeInterpreterSwitch
+    static Object testBCDSLPrologIfVersion(@SuppressWarnings("unused") int value) {
+        Object o = null;
+        if (!CompilerDirectives.inInterpreter() && CompilerDirectives.hasNextTier()) {
+            GraalDirectives.deoptimize();
+            o = new Object();
+        }
+        // must be inlined
+        trivialMethod();
+        return o;
+    }
+
     void runTest(String methodName) {
         // initialize the Truffle runtime to ensure that all intrinsics are applied
         Truffle.getRuntime();
 
         ResolvedJavaMethod method = getResolvedJavaMethod(methodName);
-        ExplorationDepth depth = method.getAnnotation(ExplorationDepth.class);
+        AnnotationValue depth = AnnotationValueSupport.getAnnotationValue(method, ExplorationDepth.class);
         int explorationDepth = -1;
         if (depth != null) {
-            explorationDepth = depth.value();
+            explorationDepth = depth.getInt("value");
         }
 
-        NodeCostLimit nodeCostLimit = method.getAnnotation(NodeCostLimit.class);
-        OptionValues options = createHostInliningOptions(nodeCostLimit != null ? nodeCostLimit.value() : NODE_COST_LIMIT, explorationDepth);
+        AnnotationValue nodeCostLimit = AnnotationValueSupport.getAnnotationValue(method, NodeCostLimit.class);
+        OptionValues options = createHostInliningOptions(nodeCostLimit != null ? nodeCostLimit.getInt("value") : NODE_COST_LIMIT, explorationDepth);
         StructuredGraph graph = parseForCompile(method, options);
         try {
             // call it so all method are initialized
@@ -177,7 +201,7 @@ public class HostInliningTest extends TruffleCompilerImplTest {
             }
         }
 
-        try (DebugContext.Scope ds = graph.getDebug().scope("Testing", method, graph)) {
+        try (DebugContext.Scope _ = graph.getDebug().scope("Testing", method, graph)) {
             HighTierContext context = getEagerHighTierContext();
             CanonicalizerPhase canonicalizer = createCanonicalizerPhase();
             if (run == TestRun.WITH_CONVERT_TO_GUARD) {
@@ -185,16 +209,17 @@ public class HostInliningTest extends TruffleCompilerImplTest {
             }
             new HostInliningPhase(canonicalizer).apply(graph, context);
 
-            ExpectNotInlined notInlined = method.getAnnotation(ExpectNotInlined.class);
-            ExpectSameGraph sameGraph = method.getAnnotation(ExpectSameGraph.class);
+            AnnotationValue notInlined = AnnotationValueSupport.getAnnotationValue(method, ExpectNotInlined.class);
+            AnnotationValue sameGraph = AnnotationValueSupport.getAnnotationValue(method, ExpectSameGraph.class);
 
             if (sameGraph != null) {
-                ResolvedJavaMethod compareMethod = getResolvedJavaMethod(sameGraph.value());
+                ResolvedJavaMethod compareMethod = getResolvedJavaMethod(sameGraph.getString("value"));
                 StructuredGraph compareGraph = parseForCompile(compareMethod, options);
                 assertEquals(compareGraph, graph);
             }
 
-            assertInvokesFound(graph, notInlined != null ? notInlined.name() : null, notInlined != null ? notInlined.count() : null);
+            assertInvokesFound(graph, notInlined != null ? notInlined.getList("name", String.class) : null,
+                            notInlined != null ? notInlined.getList("count", Integer.class) : null);
 
         } catch (Throwable e) {
             graph.getDebug().dump(DebugContext.BASIC_LEVEL, graph, "error graph");
@@ -231,8 +256,8 @@ public class HostInliningTest extends TruffleCompilerImplTest {
         });
     }
 
-    public static void assertInvokesFound(StructuredGraph graph, String[] notInlined, int[] counts) {
-        Map<String, Integer> found = new HashMap<>();
+    public static void assertInvokesFound(StructuredGraph graph, List<String> notInlined, List<Integer> counts) {
+        Map<String, Integer> found = new EconomicHashMap<>();
         List<Invoke> invokes = new ArrayList<>();
         invokes.addAll(graph.getNodes().filter(InvokeNode.class).snapshot());
         invokes.addAll(graph.getNodes().filter(InvokeWithExceptionNode.class).snapshot());
@@ -242,10 +267,10 @@ public class HostInliningTest extends TruffleCompilerImplTest {
             if (notInlined == null) {
                 Assert.fail("Unexpected node type found in the graph: " + invoke);
             } else {
-                for (int i = 0; i < notInlined.length; i++) {
-                    String expectedMethodName = notInlined[i];
+                for (int i = 0; i < notInlined.size(); i++) {
+                    String expectedMethodName = notInlined.get(i);
                     if (expectedMethodName.equals(invokedMethod.getName())) {
-                        int expectedCount = counts[i];
+                        int expectedCount = counts.get(i);
                         int currentCount = found.getOrDefault(invokedMethod.getName(), 0);
                         if (expectedCount >= 0) {
                             currentCount++;
@@ -258,13 +283,13 @@ public class HostInliningTest extends TruffleCompilerImplTest {
                         continue invoke;
                     }
                 }
-                Assert.fail("Unexpected invoke found " + invoke + ". Expected one of " + Arrays.toString(notInlined));
+                Assert.fail("Unexpected invoke found " + invoke + ". Expected one of " + notInlined);
             }
         }
         if (notInlined != null) {
-            for (int i = 0; i < notInlined.length; i++) {
-                String expectedMethodName = notInlined[i];
-                int expectedCount = counts[i];
+            for (int i = 0; i < notInlined.size(); i++) {
+                String expectedMethodName = notInlined.get(i);
+                int expectedCount = counts.get(i);
                 int currentCount = found.getOrDefault(expectedMethodName, 0);
                 if (expectedCount >= 0 && currentCount < expectedCount) {
                     Assert.fail("Expected " + expectedCount + " calls to " + expectedMethodName + " but got " + currentCount + ".");
@@ -315,7 +340,7 @@ public class HostInliningTest extends TruffleCompilerImplTest {
     }
 
     @BytecodeInterpreterSwitch
-    @ExpectNotInlined(name = {"trivialMethod", "traceTransferToInterpreter"}, count = {1, 1})
+    @ExpectNotInlined(name = {"trivialMethod", "traceTransferToInterpreter"}, count = {1, -1})
     private static int testDominatedDeopt(int value) {
         if (value == 1) {
             CompilerDirectives.transferToInterpreterAndInvalidate(); // inlined
@@ -412,6 +437,7 @@ public class HostInliningTest extends TruffleCompilerImplTest {
     }
 
     static int notExplorable(int value) {
+        // Checkstyle: stop stable iteration order check
         new HashMap<>().put(value, value);
         new HashMap<>().put(value, value);
         new HashMap<>().put(value, value);
@@ -433,6 +459,7 @@ public class HostInliningTest extends TruffleCompilerImplTest {
         new HashMap<>().put(value, value);
         new HashMap<>().put(value, value);
         new HashMap<>().put(value, value);
+        // Checkstyle: resume stable iteration order check
         return value;
     }
 
@@ -963,8 +990,31 @@ public class HostInliningTest extends TruffleCompilerImplTest {
         return (int) MyTypesGen.asImplicitDouble(0, value);
     }
 
+    @BytecodeInterpreterSwitch
+    @ExpectNotInlined(name = {"nativeCall"}, count = {1})
+    static int testNativeCall(int value) {
+        if (value == 42) {
+            // we do not call nativeCall directly to trigger the peek deopt logic in host inlining
+            peekNativeCall();
+        }
+        return 42;
+    }
+
+    static void peekNativeCall() {
+        nativeCall();
+    }
+
+    static native void nativeCall();
+
     static int testIndirectIntrinsicsImpl(A a) {
         return a.intrinsic(); // inlined and intrinsic
+    }
+
+    @InliningRoot
+    static int testInliningRoot(int value) {
+        // should work just like bytecode interpreter switches
+        trivialMethod();
+        return value;
     }
 
     @Retention(RetentionPolicy.RUNTIME)
