@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,26 +25,22 @@
 package jdk.graal.compiler.graph;
 
 import static jdk.graal.compiler.graph.Graph.isNodeModificationCountsEnabled;
-import static jdk.graal.compiler.serviceprovider.GraalUnsafeAccess.getUnsafe;
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.RetentionPolicy;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Formattable;
 import java.util.FormattableFlags;
 import java.util.Formatter;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
-import org.graalvm.collections.EconomicSet;
-
 import jdk.graal.compiler.core.common.Fields;
-import jdk.graal.compiler.core.common.type.AbstractPointerStamp;
 import jdk.graal.compiler.core.common.type.Stamp;
 import jdk.graal.compiler.core.common.util.CompilationAlarm;
 import jdk.graal.compiler.debug.Assertions;
@@ -60,9 +56,11 @@ import jdk.graal.compiler.nodeinfo.NodeCycles;
 import jdk.graal.compiler.nodeinfo.NodeInfo;
 import jdk.graal.compiler.nodeinfo.NodeSize;
 import jdk.graal.compiler.nodeinfo.Verbosity;
+import jdk.graal.compiler.nodes.StructuredGraph;
+import jdk.graal.compiler.nodes.spi.Simplifiable;
 import jdk.graal.compiler.options.OptionValues;
-import jdk.vm.ci.services.Services;
-import sun.misc.Unsafe;
+import jdk.graal.compiler.util.EconomicHashMap;
+import jdk.internal.misc.Unsafe;
 
 /**
  * This class is the base class for all nodes. It represents a node that can be inserted in a
@@ -83,7 +81,7 @@ import sun.misc.Unsafe;
  * Nodes which are value numberable should implement the {@link ValueNumberable} interface.
  *
  * <h1>Assertions and Verification</h1>
- *
+ * <p>
  * The Node class supplies the {@link #assertTrue(boolean, String, Object...)} and
  * {@link #assertFalse(boolean, String, Object...)} methods, which will check the supplied boolean
  * and throw a VerificationError if it has the wrong value. Both methods will always either throw an
@@ -93,11 +91,9 @@ import sun.misc.Unsafe;
 @NodeInfo
 public abstract class Node implements Cloneable, Formattable {
 
-    private static final Unsafe UNSAFE = getUnsafe();
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
 
     public static final NodeClass<?> TYPE = null;
-
-    public static final boolean TRACK_CREATION_POSITION = Boolean.parseBoolean(Services.getSavedProperty("debug.graal.TrackNodeCreationPosition"));
 
     static final int DELETED_ID_START = -1000000000;
     static final int INITIAL_ID = -1;
@@ -109,7 +105,7 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Denotes a non-optional (non-null) node input. This should only be applied to fields of type
      * {@link Node} or {@link NodeInputList}.
-     *
+     * <p>
      * Nodes that update fields of type {@link Node} outside of their constructor should call
      * {@link Node#updateUsages(Node, Node)} just prior to the update.
      */
@@ -122,7 +118,7 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Denotes an optional (nullable) node input. This should only be applied to fields of type
      * {@link Node} or {@link NodeInputList}.
-     *
+     * <p>
      * Nodes that update fields of type {@link Node} outside of their constructor should call
      * {@link Node#updateUsages(Node, Node)} just prior to the update.
      */
@@ -202,14 +198,6 @@ public abstract class Node implements Cloneable, Formattable {
         Class<?> value() default NodeIntrinsic.class;
 
         /**
-         * If {@code true}, the factory method or constructor selected by the annotation must have
-         * an {@linkplain InjectedNodeParameter injected} {@link Stamp} parameter. Calling
-         * {@link AbstractPointerStamp#nonNull()} on the injected stamp is guaranteed to return
-         * {@code true}.
-         */
-        boolean injectedStampIsNonNull() default false;
-
-        /**
          * If {@code true} then this is lowered into a node that has side effects.
          */
         boolean hasSideEffect() default false;
@@ -238,8 +226,75 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Marker interface for nodes that contain other nodes. When the inputs to {@code this} change,
      * users of {@code this} should also be placed on the work list for canonicalization.
+     * <p>
+     * To illustrate this consider the following IR shape:
+     *
+     * <pre>
+     *                       Node n1
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     * <p>
+     * Now consider the following situation: this pattern is fully optimized, nothing can change.
+     * However, when the input node {@code n1} of {@code IndirectInputCanonicalization} changes to a
+     * new node {@code n2} suddenly the usage of {@code IndirectInputCanonicalization} can optimize
+     * itself: for example it can drop an input edge (any optimization is possible). Normally these
+     * patterns would be found by a full canonicalizer run, by implementing this interface
+     * incremental canonicalization will also consider the usages.
+     *
+     * <pre>
+     *                       NewNode n2
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     * <p>
+     * The pattern could optimize for example to
+     *
+     * <pre>
+     *                       NewNode n2---------------
+     *                          |                     |
+     *          IndirectInputCanonicalization         |
+     *          /               |                     |
+     *       usage1          usage2          usage3----
+     * </pre>
+     * <p>
+     * where {@code usage3} completely skips {@code IndirectInputCanonicalization} now.
+     * <p>
+     * Note that this is called {@code IndirectInputChangedCanonicalization} because {@code n1} is
+     * considered an indirect (transitive) input of {@code usage3}.
      */
-    public interface IndirectCanonicalization {
+    public interface IndirectInputChangedCanonicalization {
+    }
+
+    /**
+     * Marker interface for nodes where one input change can cause another input to optimize.
+     * <p>
+     * Consider the following IR shape:
+     *
+     * <pre>
+     *            Node n1         Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     * <p>
+     * If now input {@code n1} is replaced by another node
+     *
+     * <pre>
+     *            NewNode n3      Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     * <p>
+     * this can cause n2 to optimize. This is especially relevant for local {@link Simplifiable}
+     * simplifications based on single input/usage patterns. Thus, in order to incrementally trigger
+     * the canonicalization of {@code n2} it is explicitly added to the worklist of the usage
+     * implements {@code InputsChangedCanonicalization}.
+     */
+    public interface InputsChangedCanonicalization {
     }
 
     /**
@@ -264,7 +319,7 @@ public abstract class Node implements Cloneable, Formattable {
      * element denotes a specific usage so there can be duplicates in the list. For example, a
      * {@code ConstNode} modeling a compile constant that is added to itself will show up twice in
      * the usage list of the {@code AddNode}.
-     *
+     * <p>
      * The elements of the usage list in order are {@link #usage0}, {@link #usage1} and
      * {@link #extraUsages}. The first null entry terminates the list.
      */
@@ -278,34 +333,31 @@ public abstract class Node implements Cloneable, Formattable {
 
     public static final int NOT_ITERABLE = -1;
 
-    static class NodeStackTrace {
-        final StackTraceElement[] stackTrace = new Throwable().getStackTrace();
+    public static final String NODE_INSERTION_POSITION_NAME = "nodeInsertionPosition";
 
-        private String getString(String label) {
+    public static final String NODE_SOURCE_POSITION_NAME = "nodeSourcePosition";
+
+    /**
+     * Lazily constructed stack trace of the compiler call stack showing when a node was inserted
+     * into the graph.
+     */
+    static class NodeInsertionStackTrace {
+        final Throwable throwable = new Throwable();
+
+        @Override
+        public String toString() {
             StringBuilder sb = new StringBuilder();
-            if (label != null) {
-                sb.append(label).append(": ");
-            }
-            for (StackTraceElement ste : stackTrace) {
+            sb.append(getClass().getSimpleName()).append(": ");
+            boolean first = true;
+            for (StackTraceElement ste : throwable.getStackTrace()) {
+                if (first) {
+                    first = false;
+                    continue;
+                }
                 sb.append("at ").append(ste.toString()).append('\n');
             }
             return sb.toString();
         }
-
-        String getStrackTraceString() {
-            return getString(null);
-        }
-
-        @Override
-        public String toString() {
-            return getString(getClass().getSimpleName());
-        }
-    }
-
-    static class NodeCreationStackTrace extends NodeStackTrace {
-    }
-
-    public static class NodeInsertionStackTrace extends NodeStackTrace {
     }
 
     @SuppressWarnings("this-escape")
@@ -318,9 +370,6 @@ public abstract class Node implements Cloneable, Formattable {
         this.nodeClass = c;
         id = INITIAL_ID;
         extraUsages = EMPTY_ARRAY;
-        if (TRACK_CREATION_POSITION) {
-            setCreationPosition(new NodeCreationStackTrace());
-        }
     }
 
     /**
@@ -491,6 +540,24 @@ public abstract class Node implements Cloneable, Formattable {
     }
 
     /**
+     * Checks whether {@code this} has any usages of type {@code inputType}.
+     *
+     * @param inputType the type of usages to look for
+     */
+    public final boolean hasUsagesOfType(InputType inputType) {
+        for (Node usage : usages()) {
+            for (Position pos : usage.inputPositions()) {
+                if (pos.get(usage) == this) {
+                    if (pos.getInputType() == inputType) {
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
+
+    /**
      * Adds a given node to this node's {@linkplain #usages() usages}.
      *
      * @param node the node to add
@@ -506,7 +573,9 @@ public abstract class Node implements Cloneable, Formattable {
             if (length == 0) {
                 extraUsages = new Node[4];
             } else if (extraUsagesCount == length) {
-                Node[] newExtraUsages = new Node[length * 2 + 1];
+                int growth = length >> 1;
+                // Grow the usages array by 1.5x
+                Node[] newExtraUsages = new Node[length + growth];
                 System.arraycopy(extraUsages, 0, newExtraUsages, 0, length);
                 extraUsages = newExtraUsages;
             }
@@ -530,13 +599,20 @@ public abstract class Node implements Cloneable, Formattable {
         Node n = extraUsages[extraUsagesCount];
         extraUsages[destExtraIndex] = n;
         extraUsages[extraUsagesCount] = null;
+        if (extraUsagesCount == 0) {
+            extraUsages = EMPTY_ARRAY;
+        }
     }
 
     private void movUsageFromEndToIndexZero() {
         if (extraUsagesCount > 0) {
             this.extraUsagesCount--;
             usage0 = extraUsages[extraUsagesCount];
-            extraUsages[extraUsagesCount] = null;
+            if (extraUsagesCount == 0) {
+                extraUsages = EMPTY_ARRAY;
+            } else {
+                extraUsages[extraUsagesCount] = null;
+            }
         } else if (usage1 != null) {
             usage0 = usage1;
             usage1 = null;
@@ -549,7 +625,11 @@ public abstract class Node implements Cloneable, Formattable {
         if (extraUsagesCount > 0) {
             this.extraUsagesCount--;
             usage1 = extraUsages[extraUsagesCount];
-            extraUsages[extraUsagesCount] = null;
+            if (extraUsagesCount == 0) {
+                extraUsages = EMPTY_ARRAY;
+            } else {
+                extraUsages[extraUsagesCount] = null;
+            }
         } else {
             assert usage1 != null;
             usage1 = null;
@@ -587,32 +667,47 @@ public abstract class Node implements Cloneable, Formattable {
     }
 
     /**
-     * Removes all nodes in the provided set from {@code this} node's usages. This is significantly
-     * faster than repeated execution of {@link Node#removeUsage}.
+     * Removes (at most) an expected number of occurrences of a given node from this node's
+     * {@linkplain #usages() usages}. This is significantly faster than repeated execution of
+     * {@link #removeUsage(Node)} of the same usage from this node, since the usages have to be
+     * traversed only once.
+     *
+     * @param node the node to remove from the usages
+     * @param limit the number of matching usages to remove (at most)
+     * @return the number of actually removed usages
      */
-    public void removeUsages(EconomicSet<Node> toDelete) {
-        if (toDelete.size() == 0) {
-            return;
-        } else if (toDelete.size() == 1) {
-            removeUsage(toDelete.iterator().next());
-            return;
+    public int removeUsageNTimes(Node node, int limit) {
+        if (limit == 0) {
+            return 0;
+        } else if (limit == 1) {
+            return removeUsage(node) ? 1 : 0;
         }
-
         // requires iteration from back to front to check nodes prior to being moved to the front
+        int removedUsages = 0;
         for (int i = extraUsagesCount - 1; i >= 0; i--) {
-            if (toDelete.contains(extraUsages[i])) {
+            if (extraUsages[i] == node) {
                 movUsageFromEndToExtraUsages(i);
                 incUsageModCount();
+                if (++removedUsages == limit) {
+                    return removedUsages;
+                }
             }
         }
-        if (usage1 != null && toDelete.contains(usage1)) {
+        if (usage1 == node) {
             movUsageFromEndToIndexOne();
             incUsageModCount();
+            if (++removedUsages == limit) {
+                return removedUsages;
+            }
         }
-        if (usage0 != null && toDelete.contains(usage0)) {
+        if (usage0 == node) {
             movUsageFromEndToIndexZero();
             incUsageModCount();
+            if (++removedUsages == limit) {
+                return removedUsages;
+            }
         }
+        return removedUsages;
     }
 
     /**
@@ -716,13 +811,13 @@ public abstract class Node implements Cloneable, Formattable {
             if (newSuccessor != null) {
                 assertTrue(newSuccessor.predecessor == null, "unexpected non-null predecessor in new successor (%s): %s, this=%s", newSuccessor, newSuccessor.predecessor, this);
                 newSuccessor.predecessor = this;
-                maybeNotifyInputChanged(newSuccessor);
+                maybeNotifyControlFlowChanged(newSuccessor);
             }
-            maybeNotifyInputChanged(this);
+            maybeNotifyControlFlowChanged(this);
         }
     }
 
-    void initialize(Graph newGraph) {
+    final void initialize(Graph newGraph) {
         assertTrue(id == INITIAL_ID, "unexpected id: %d", id);
         this.graph = newGraph;
         newGraph.register(this);
@@ -799,14 +894,6 @@ public abstract class Node implements Cloneable, Formattable {
         setNodeInfo(NodeSourcePosition.class, null);
     }
 
-    public NodeCreationStackTrace getCreationPosition() {
-        return getNodeInfo(NodeCreationStackTrace.class);
-    }
-
-    public void setCreationPosition(NodeCreationStackTrace trace) {
-        setNodeInfo(NodeCreationStackTrace.class, trace);
-    }
-
     public NodeInsertionStackTrace getInsertionPosition() {
         return getNodeInfo(NodeInsertionStackTrace.class);
     }
@@ -857,10 +944,10 @@ public abstract class Node implements Cloneable, Formattable {
 
     /**
      * For each use of {@code this} in another node, replace it with {@code replacement}.
-     *
+     * <p>
      * This is shown by the graph transformation below where edges are from usages to inputs (e.g.
      * {@code this} is an input of {@code n0}).
-     *
+     * <p>
      * Before:
      *
      * <pre>
@@ -873,7 +960,7 @@ public abstract class Node implements Cloneable, Formattable {
      *    n0  n1 ..nN
      *
      * </pre>
-     *
+     * <p>
      * After:
      *
      * <pre>
@@ -885,7 +972,7 @@ public abstract class Node implements Cloneable, Formattable {
      *      /  |  \
      *    n0  n1 ..nN
      * </pre>
-     *
+     * <p>
      * If {@code replacement == null}, then the edges are simply removed.
      */
     public final void replaceAtUsages(Node replacement) {
@@ -987,7 +1074,6 @@ public abstract class Node implements Cloneable, Formattable {
      *
      * @param forDeletion specifies if the caller will {@linkplain #safeDelete() remove}
      *            {@code this} from the graph after this method returns
-     *
      * @see #replaceAtUsages(Node)
      */
     private void replaceAtUsage(Node replacement, boolean forDeletion, Node usage) {
@@ -1010,7 +1096,6 @@ public abstract class Node implements Cloneable, Formattable {
      *
      * @param forDeletion specifies if the caller will {@linkplain #safeDelete() remove}
      *            {@code this} from the graph after this method returns
-     *
      * @see #replaceAtUsages(Node)
      */
     private void replaceAtMatchingUsages(Node replacement, Predicate<Node> filter, boolean forDeletion) {
@@ -1096,6 +1181,38 @@ public abstract class Node implements Cloneable, Formattable {
 
     /**
      * For each use of {@code this} in another node, {@code n}, replace it with {@code replacement}
+     * if the type of the use is in {@code inputTypes} and if {@code filter.test(n) == true}.
+     *
+     * @see #replaceAtUsages(Node)
+     */
+    public void replaceAtUsages(Node replacement, Predicate<Node> filter, InputType inputType) {
+        checkReplaceWith(replacement);
+        int i = 0;
+        int usageCount = this.getUsageCount();
+        if (usageCount == 0) {
+            return;
+        }
+        usages: while (i < usageCount) {
+            Node usage = this.getUsageAt(i);
+            if (filter.test(usage)) {
+                for (Position pos : usage.inputPositions()) {
+                    if (pos.getInputType() == inputType && pos.get(usage) == this) {
+                        replaceAtUsagePos(replacement, usage, pos);
+                        this.movUsageFromEndTo(i);
+                        usageCount--;
+                        continue usages;
+                    }
+                }
+            }
+            i++;
+        }
+        if (hasNoUsages()) {
+            maybeNotifyZeroUsages(this);
+        }
+    }
+
+    /**
+     * For each use of {@code this} in another node, {@code n}, replace it with {@code replacement}
      * if the type of the use is in {@code inputTypes}.
      *
      * @see #replaceAtUsages(Node)
@@ -1126,13 +1243,18 @@ public abstract class Node implements Cloneable, Formattable {
         }
     }
 
+    private void maybeNotifyControlFlowChanged(Node node) {
+        if (graph != null) {
+            assert !graph.isFrozen() : "Frozen graph must not change!";
+            graph.fireNodeEvent(Graph.NodeEvent.CONTROL_FLOW_CHANGED, node);
+            graph.edgeModificationCount++;
+        }
+    }
+
     private void maybeNotifyInputChanged(Node node) {
         if (graph != null) {
-            assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.INPUT_CHANGED, node);
-            }
+            assert !graph.isFrozen() : "Frozen graph must not change!";
+            graph.fireNodeEvent(Graph.NodeEvent.INPUT_CHANGED, node);
             graph.edgeModificationCount++;
         }
     }
@@ -1144,11 +1266,8 @@ public abstract class Node implements Cloneable, Formattable {
      */
     public void maybeNotifyZeroUsages(Node node) {
         if (graph != null && node.isAlive()) {
-            assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.ZERO_USAGES, node);
-            }
+            assert !graph.isFrozen() : "Frozen graph must not change!";
+            graph.fireNodeEvent(Graph.NodeEvent.ZERO_USAGES, node);
         }
     }
 
@@ -1197,7 +1316,7 @@ public abstract class Node implements Cloneable, Formattable {
      * Finds the first {@link Input} or {@link OptionalInput} in {@code this} whose value is
      * {@code oldInput} and replaces it with {@code newInput}. If the input is changed, the usage
      * info for {@code oldInput} and {@code newInput} is updated as well.
-     *
+     * <p>
      * Before {@code this.replaceFirstInput(n0, n2)}:
      *
      * <pre>
@@ -1209,7 +1328,7 @@ public abstract class Node implements Cloneable, Formattable {
      *           V
      *         this
      * </pre>
-     *
+     * <p>
      * After {@code this.replaceFirstInput(n0, n2)}:
      *
      * <pre>
@@ -1232,7 +1351,7 @@ public abstract class Node implements Cloneable, Formattable {
      * Finds all {@link Input}s and {@link OptionalInput}s in {@code this} whose value is
      * {@code oldInput} and replaces them with {@code newInput}. If any input is changed, the usage
      * info for {@code oldInput} and {@code newInput} is updated as well.
-     *
+     * <p>
      * Before {@code this.replaceAllInputs(n0, n2)}:
      *
      * <pre>
@@ -1244,7 +1363,7 @@ public abstract class Node implements Cloneable, Formattable {
      *           V
      *         this
      * </pre>
-     *
+     * <p>
      * After {@code this.replaceAllInputs(n0, n2)}:
      *
      * <pre>
@@ -1344,10 +1463,15 @@ public abstract class Node implements Cloneable, Formattable {
      *            list for an edge list)
      * @return the copy of {@code this}
      */
+
     final Node clone(Graph into, EnumSet<Edges.Type> edgesToCopy) {
+        return clone(into, edgesToCopy, true);
+    }
+
+    final Node clone(Graph into, EnumSet<Edges.Type> edgesToCopy, boolean gvn) {
         final NodeClass<? extends Node> nodeClassTmp = getNodeClass();
         boolean useIntoLeafNodeCache = false;
-        if (into != null) {
+        if (into != null && gvn) {
             if (nodeClassTmp.valueNumberable() && nodeClassTmp.isLeafNode()) {
                 useIntoLeafNodeCache = true;
                 Node otherNode = into.findNodeInCache(this);
@@ -1545,7 +1669,7 @@ public abstract class Node implements Cloneable, Formattable {
         return id;
     }
 
-    /**
+    /*
      * Do not overwrite the equality test of a node in subclasses. Equality tests must rely solely
      * on identity.
      */
@@ -1555,7 +1679,7 @@ public abstract class Node implements Cloneable, Formattable {
      * the ideal graph visualizer).
      */
     public final Map<Object, Object> getDebugProperties() {
-        return getDebugProperties(new HashMap<>());
+        return getDebugProperties(new EconomicHashMap<>());
     }
 
     /**
@@ -1573,20 +1697,24 @@ public abstract class Node implements Cloneable, Formattable {
                 // Convert a char to an int as chars are not guaranteed to printable/viewable
                 char ch = (char) value;
                 value = Integer.valueOf(ch);
+            } else if (properties.getType(i) == byte[].class) {
+                String encoded = Base64.getEncoder().encodeToString((byte[]) value);
+                /*
+                 * BGV Replay for truffle: in order to be able to reconstruct most of the truffle
+                 * graphs after partial evaluation we have to dump some properties in a parseable
+                 * form. Byte arrays are used throughout truffle, thus make them re-parseable.
+                 */
+                value = "base64:" + encoded;
             }
             map.put(properties.getName(i), value);
         }
         NodeSourcePosition pos = getNodeSourcePosition();
         if (pos != null) {
-            map.put("nodeSourcePosition", pos);
-        }
-        NodeCreationStackTrace creation = getCreationPosition();
-        if (creation != null) {
-            map.put("nodeCreationPosition", creation.getStrackTraceString());
+            map.put(NODE_SOURCE_POSITION_NAME, pos);
         }
         NodeInsertionStackTrace insertion = getInsertionPosition();
         if (insertion != null) {
-            map.put("nodeInsertionPosition", insertion.getStrackTraceString());
+            map.put(NODE_INSERTION_POSITION_NAME, insertion);
         }
         return map;
     }
@@ -1612,11 +1740,16 @@ public abstract class Node implements Cloneable, Formattable {
                 return toString(Verbosity.Id) + "|" + toString(Verbosity.Name);
             case Long:
                 return toString(Verbosity.Short);
-            case Debugger:
+            case AllVerbose:
             case All: {
                 StringBuilder str = new StringBuilder();
                 str.append(toString(Verbosity.Short)).append(" { ");
                 for (Map.Entry<Object, Object> entry : getDebugProperties().entrySet()) {
+                    if (verbosity == Verbosity.All) {
+                        if (entry.getKey().equals(NODE_INSERTION_POSITION_NAME) || entry.getKey().equals(NODE_SOURCE_POSITION_NAME)) {
+                            continue;
+                        }
+                    }
                     str.append(entry.getKey()).append("=").append(entry.getValue()).append(", ");
                 }
                 str.append(" }");
@@ -1627,6 +1760,13 @@ public abstract class Node implements Cloneable, Formattable {
         }
     }
 
+    /**
+     * Note that this is not a stable identity. It's updated when a node is
+     * {@linkplain #markDeleted() deleted} or potentially when its graph is
+     * {@linkplain StructuredGraph#maybeCompress compressed}.
+     *
+     * @see NodeIdAccessor
+     */
     @Deprecated
     public int getId() {
         return id;
@@ -1701,7 +1841,7 @@ public abstract class Node implements Cloneable, Formattable {
      * Determines if this node's {@link NodeClass#getData() data} fields are equal to the data
      * fields of another node of the same type. Primitive fields are compared by value and
      * non-primitive fields are compared by {@link Objects#equals(Object, Object)}.
-     *
+     * <p>
      * The result of this method undefined if {@code other.getClass() != this.getClass()}.
      *
      * @param other a node of exactly the same type as {@code this}
@@ -1714,7 +1854,6 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Determines if {@code this} is equal to the other node while ignoring differences in
      * {@linkplain Successor control-flow} edges.
-     *
      */
     public final boolean dataFlowEquals(Node other) {
         return this == other || nodeClass == other.getNodeClass() && this.valueEquals(other) && nodeClass.equalInputs(this, other);
@@ -1735,7 +1874,7 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Node subclasses should override this method if they need to specify a dynamically calculated
      * {@link NodeSize} value. If the node size is static please use {@link NodeInfo#size()}.
-     *
+     * <p>
      * NOTE: When overriding this method, make sure that *all* field reads are null checked (even if
      * Java semantics seemingly make the value of the field non-null). This is necessary because
      * node size estimates are needed even during graph decoding which, for some nodes, first
@@ -1753,4 +1892,10 @@ public abstract class Node implements Cloneable, Formattable {
         return nodeClass.cycles();
     }
 
+    /**
+     * Special tasks to perform on a node before it is encoded.
+     */
+    public void beforeEncode() {
+        // intentionally left empty
+    }
 }
