@@ -26,6 +26,7 @@ package com.oracle.svm.core.jdk;
 
 import java.util.Map;
 
+import com.oracle.svm.core.JavaMainWrapper.ArgsSupport;
 import com.oracle.svm.core.NeverInline;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.Alias;
@@ -35,10 +36,7 @@ import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
-import com.oracle.svm.core.heap.PhysicalMemory;
 import com.oracle.svm.core.snippets.KnownIntrinsics;
-
-import jdk.internal.misc.Unsafe;
 
 @TargetClass(className = "jdk.internal.misc.VM")
 public final class Target_jdk_internal_misc_VM {
@@ -48,13 +46,22 @@ public final class Target_jdk_internal_misc_VM {
 
     @Substitute
     public static String getSavedProperty(String name) {
-        return SystemPropertiesSupport.singleton().getSavedProperties().get(name);
+        return SystemPropertiesSupport.singleton().getInitialProperty(name);
     }
 
     @Substitute
     @NeverInline("Starting a stack walk in the caller frame")
     public static ClassLoader latestUserDefinedLoader0() {
         return StackTraceUtils.latestUserDefinedClassLoader(KnownIntrinsics.readCallerStackPointer());
+    }
+
+    @Substitute
+    public static String[] getRuntimeArguments() {
+        /**
+         * This method is called by SourceLauncher to find arguments that the java launcher usually
+         * gives to the JVM rather than the application (--add-exports, --add-opens, etc).
+         */
+        return ArgsSupport.singleton().getInitialArgs();
     }
 
     /*
@@ -69,17 +76,18 @@ public final class Target_jdk_internal_misc_VM {
     @Alias @InjectAccessors(DirectMemoryAccessors.class) //
     private static long directMemory;
     @Alias @InjectAccessors(PageAlignDirectMemoryAccessors.class) //
-    private static boolean pageAlignDirectMemory;
+    private static Boolean pageAlignDirectMemory;
 }
 
 final class DirectMemoryAccessors {
-    private static final long DIRECT_MEMORY_DURING_INITIALIZATION = 25 * 1024 * 1024;
-
-    /*
-     * Not volatile to avoid a memory barrier when reading the values. Instead, an explicit barrier
-     * is inserted when writing the values.
+    /**
+     * This field needs to be volatile to ensure that reads emit a LOAD-LOAD barrier. Without this
+     * barrier, subsequent reads could be reordered before the read of {@link #initialized},
+     * allowing threads to observe an uninitialized value for {@link #directMemory}. We could
+     * directly emit a LOAD-LOAD barrier instead, but it doesn't make any difference in terms of the
+     * used instructions on any of the relevant CPU architectures.
      */
-    private static boolean initialized;
+    private static volatile boolean initialized;
     private static long directMemory;
 
     static long getDirectMemory() {
@@ -102,42 +110,22 @@ final class DirectMemoryAccessors {
              * No value explicitly specified. The default in the JDK in this case is the maximum
              * heap size.
              */
-            if (PhysicalMemory.isInitializationInProgress()) {
-                /*
-                 * When initializing PhysicalMemory, we use NIO/cgroups code that calls
-                 * VM.getDirectMemory(). When this initialization is in progress, we need to prevent
-                 * that Runtime.maxMemory() is called below because it would trigger a recursive
-                 * initialization of PhysicalMemory. So, we return a temporary value.
-                 */
-                return DIRECT_MEMORY_DURING_INITIALIZATION;
-            }
             newDirectMemory = Runtime.getRuntime().maxMemory();
         }
 
-        /*
-         * The initialization is not synchronized, so multiple threads can race. Usually this will
-         * lead to the same value, unless the runtime options are modified concurrently - which is
-         * possible but not a case we care about.
-         */
         directMemory = newDirectMemory;
-
-        /* Ensure values are published to other threads before marking fields as initialized. */
-        Unsafe.getUnsafe().storeFence();
+        /* STORE_STORE barrier is executed as part of the volatile write. */
         initialized = true;
-
         return newDirectMemory;
     }
 }
 
 final class PageAlignDirectMemoryAccessors {
-    /*
-     * Not volatile to avoid a memory barrier when reading the values. Instead, an explicit barrier
-     * is inserted when writing the values.
-     */
-    private static boolean initialized;
+    /** See {@link DirectMemoryAccessors#initialized} on why this needs to be volatile. */
+    @SuppressWarnings("javadoc") private static volatile boolean initialized;
     private static boolean pageAlignDirectMemory;
 
-    static boolean getPageAlignDirectMemory() {
+    static Boolean getPageAlignDirectMemory() {
         if (!initialized) {
             initialize();
         }
@@ -146,9 +134,7 @@ final class PageAlignDirectMemoryAccessors {
 
     private static void initialize() {
         pageAlignDirectMemory = Boolean.getBoolean("sun.nio.PageAlignDirectMemory");
-
-        /* Ensure values are published to other threads before marking fields as initialized. */
-        Unsafe.getUnsafe().storeFence();
+        /* STORE_STORE barrier is executed as part of the volatile write. */
         initialized = true;
     }
 }
